# c_cpp

./: .gitignore  CMakeLists.txt  ftpd.c  test.sh
app/: CMakeLists.txt  app_test_libs.c  store.c  sum.cpp
docs/: abbreviations_code.html  abbreviations_code_extra.md  cmake.md  curl.md  fsck.md  gdb.md  git.md  go.md  kernel.md  lift_project.md  linux.md  nccd.md  optee.md  rules.md  serial_permision.md  shell.md  style.less  svn.md  tina_env.md  video.md
libs/: CMakeLists.txt
libs/EasyLogger/: CMakeLists.txt
libs/EasyLogger/easylogger/inc/: elog.h  elog_cfg.h
libs/EasyLogger/easylogger/src/: elog.c
libs/log/: log.c  log.h
libs/utils_standard_c/: CMakeLists.txt  utils_vsprintf.c  utils_vsprintf.h
program/: CMakeLists.txt
program/ftp/: CMakeLists.txt  Makefile  common.h  ftp.c  handles.c  server.c
script/: cli.py  ftp_test.py  get_time.sh  log_2.py  miniterm.py  nccd_protocol.py  nccd_test.py  serial.sh  test.py  test.sh
script/wsl_env_setup/: bashrc_define.sh
src/: CMakeLists.txt
src/misc/: CMakeLists.txt
src/misc/list/: list.h
src/misc/log/: log.h
test/: CMakeLists.txt  at_cmd.c  cmd.c  err_code.c  json_test.c  log_test.c  serial.c  test.c  word_director.cpp
